...
    var showMenuTags by remember { mutableStateOf(false) }
    val focusRequester = remember { FocusRequester() }

    val token = userViewModel.token.collectAsState().value

    val availableTags = listOf(
        TagItem("Estudo", VerdeEstudo, R.drawable.estudo_icon),
        TagItem("Venda", AzulVenda, R.drawable.venda_icon),
        TagItem("Info", LaranjaInfo, R.drawable.info_icon)
    )

    LaunchedEffect(Unit) {
        delay(300)
        focusRequester.requestFocus()
...
                                        .fillMaxWidth()
                                        .weight(1f)
                                        .padding(vertical = 12.dp)
                                ) {
                                    if (postText.isEmpty()) {
                                        Text(
                                            text = "O que você está pensando?",
                                            color = CinzaClaro,
                                            fontSize = 16.sp,
                                        )
                                    }
                                    innerTextField()
                                }
...
) {
    TopAppBar(
        windowInsets = WindowInsets(0.dp),
        title = { Text("", color = Branco, fontSize = 20.sp) },
        navigationIcon = {
            IconButton(onClick = onCloseClick) {
                Icon(Icons.Default.Close, contentDescription = "Fechar", tint = Branco)
            }
        },
        actions = {
            Button(
                onClick = onPublish,
                colors = ButtonDefaults.buttonColors(containerColor = Branco, contentColor = Laranja),
                shape = RoundedCornerShape(50),
                modifier = Modifier.padding(5.dp)
            ) { Text("Publicar") }
        },
        colors = TopAppBarDefaults.topAppBarColors(containerColor = Laranja)
    )
}

@Composable
...
        Image(painter = painterResource(id = tag.iconRes), contentDescription = null, modifier = Modifier.size(16.dp))
        Spacer(modifier = Modifier.width(4.dp))
        Text(tag.name, color = textColor, fontSize = 14.sp)
        Spacer(modifier = Modifier.width(4.dp))
        Icon(
            Icons.Default.Close,
            contentDescription = "Remover Tag",
            tint = textColor,
            modifier = Modifier
                .size(16.dp)
                .clickable(onClick = onDismiss)
        )
    }
...
            .clickable(onClick = onClick)
            .padding(horizontal = 8.dp, vertical = 6.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Icon(Icons.Default.Add, contentDescription = "Adicionar Tag", tint = CinzaClaro, modifier = Modifier.size(18.dp))
        Spacer(modifier = Modifier.width(6.dp))
        Text("Adicionar tag", color = Color.DarkGray, fontSize = 14.sp)
    }
}

